ci: fix PR comment permissions

--- a/.github/workflows/obi-drift-check.yml
+++ b/.github/workflows/obi-drift-check.yml
@@ -24,7 +24,6 @@ jobs:
     runs-on: ubuntu-x64-small
     permissions:
       contents: read
-      pull-requests: write # Needed for PR comments
     steps:
       - name: Checkout repo
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -47,40 +46,15 @@ jobs:
           fi
           echo "drift_detected=false" >> $GITHUB_OUTPUT
 
-      - name: Comment on PR with instructions
+      - name: Save PR number for comment workflow
         if: github.event_name == 'pull_request' && failure() && steps.check-drift.outputs.drift_detected == 'true'
-        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7.1.0
+        run: |
+          mkdir -p ./pr-comment
+          echo "${{ github.event.pull_request.number }}" > ./pr-comment/pr_number
+
+      - name: Upload PR comment artifact
+        if: github.event_name == 'pull_request' && failure() && steps.check-drift.outputs.drift_detected == 'true'
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          script: |
-            const comment = `## ⚠️ OBI Drift Detected
-
-            The \`.obi-src\` submodule has been updated, but there are test functions that have drifted between Beyla and OBI.
-
-            ### To fix this issue:
-
-            1. Run the sync script locally on your branch:
-               \`\`\`bash
-               make vendor-obi
-               ./scripts/check-obi-drift.sh --sync
-               \`\`\`
-
-            2. Review the changes:
-               \`\`\`bash
-               git diff internal/test/integration/
-               \`\`\`
-
-            3. Commit and push the changes:
-               \`\`\`bash
-               git add internal/test/integration/
-               git commit -m "Sync tests from OBI"
-               git push
-               \`\`\`
-
-            This check will pass once the drift is resolved.`;
-
-            github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: comment
-            });
+          name: pr-comment
+          path: pr-comment/
