ci: no need to upload generated tests

--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -24,28 +24,8 @@ permissions:
   contents: read
 
 jobs:
-  generate-tests:
-    name: "Generate OBI tests"
-    runs-on: ubuntu-x64-small
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-        with:
-          persist-credentials: false
-          submodules: true
-
-      - name: Generate OBI tests
-        run: ./scripts/generate-obi-tests.sh
-
-      - name: Upload generated tests
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: generated-obi-tests-vm
-          path: internal/obi/
-          retention-days: 1
-
   vm-test-matrix:
     name: "Build VM integration matrix"
-    needs: generate-tests
     runs-on: ubuntu-x64-small
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
@@ -55,11 +35,8 @@ jobs:
           persist-credentials: false
           submodules: true
 
-      - name: Download generated tests
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-        with:
-          name: generated-obi-tests-vm
-          path: internal/obi/
+      - name: Generate OBI tests
+        run: make generate-obi-tests
 
       - name: build matrix
         id: build-matrix
@@ -73,7 +50,7 @@ jobs:
 
   test:
     name: kernel ${{ matrix.kernel.kernel-version }} ${{ matrix.kernel.arch }} ${{ matrix.test.description }}
-    needs: [generate-tests, vm-test-matrix]
+    needs: vm-test-matrix
     permissions:
       contents: read
       pull-requests: write
@@ -97,12 +74,6 @@ jobs:
         with:
           persist-credentials: false
           submodules: true
-
-      - name: Download generated tests
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-        with:
-          name: generated-obi-tests-vm
-          path: internal/obi/
 
       - name: Set up Go
         uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff # v5.6.0
