--- a/.github/workflows/pull_request_integration_tests.yml
+++ b/.github/workflows/pull_request_integration_tests.yml
@@ -39,28 +39,8 @@ permissions:
   contents: read
 
 jobs:
-  generate-tests:
-    name: "Generate OBI tests"
-    runs-on: ubuntu-x64-small
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-        with:
-          persist-credentials: false
-          submodules: true
-
-      - name: Generate OBI tests
-        run: ./scripts/generate-obi-tests.sh
-
-      - name: Upload generated tests
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: generated-obi-tests
-          path: internal/obi/
-          retention-days: 1
-
   test-matrix:
     name: "Build integration matrix"
-    needs: generate-tests
     runs-on: ubuntu-x64-small
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
@@ -70,11 +50,8 @@ jobs:
           persist-credentials: false
           submodules: true
 
-      - name: Download generated tests
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-        with:
-          name: generated-obi-tests
-          path: internal/obi/
+      - name: Generate OBI tests
+        run: make generate-obi-tests
 
       - name: Build matrix
         id: build-matrix
@@ -87,7 +64,7 @@ jobs:
 
   test:
     name: ${{ matrix.description }}
-    needs: [generate-tests, test-matrix]
+    needs: test-matrix
     runs-on: ubuntu-latest
     # Grant specific permissions needed only for this job
     permissions:
@@ -145,12 +122,6 @@ jobs:
           docker system prune -af || true
           docker builder prune -af || true
           df -h
-
-      - name: Download generated tests
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-        with:
-          name: generated-obi-tests
-          path: internal/obi/
 
       - name: Set up Go
         uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff # v5.6.0
