--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,7 +27,7 @@ linters:
       - ^.obi-src
       - ^vendor
       - ^internal/test/integration/components # Synced from OBI, lint issues should be fixed upstream
-      - ^internal/test/beyla_extensions # Extension files copied to generated OBI tests
+      - ^internal/test/beyla_extensions # Beyla-specific tests, copied to generated OBI tests by generate-obi-tests.sh
       - ^internal/obi/ # Generated OBI tests, not in git
     presets:
       - std-error-handling
