ci: fix missing application_host feature

--- a/internal/test/beyla_extensions/configs/obi-config-promscrape.yml
+++ b/internal/test/beyla_extensions/configs/obi-config-promscrape.yml
@@ -13,6 +13,7 @@ prometheus_export:
   features:
     - application
     - application_process
+    - application_host
   extra_resource_attributes: ["deployment_environment"]
 attributes:
   select:
