--- a/.github/workflows/pull_request_k8s_integration_tests.yml
+++ b/.github/workflows/pull_request_k8s_integration_tests.yml
@@ -14,6 +14,7 @@ on:
       - "vendor/**"
       - "Makefile"
       - "scripts/generate-integration-matrix.sh"
+      - "scripts/generate-obi-tests.sh"
       - ".github/workflows/pull_request_k8s_integration_tests.yml"
       - ".obi-src/**"
   pull_request:
@@ -29,6 +30,7 @@ on:
       - "vendor/**"
       - "Makefile"
       - "scripts/generate-integration-matrix.sh"
+      - "scripts/generate-obi-tests.sh"
       - ".github/workflows/pull_request_k8s_integration_tests.yml"
       - ".obi-src/**"
 
@@ -46,6 +48,10 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
+          submodules: true
+
+      - name: Generate OBI tests
+        run: make generate-obi-tests
 
       - name: build matrix
         id: build-matrix
@@ -115,6 +121,7 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
+          submodules: true
 
       - name: Login to DockerHub
         uses: grafana/shared-workflows/actions/dockerhub-login@051f0a1cef0e1ef9f92fbe57c65b1eec029c3904
