--- a/internal/test/beyla_extensions/k8s/manifests/06-beyla-all-processes.yml
+++ b/internal/test/beyla_extensions/k8s/manifests/06-beyla-all-processes.yml
@@ -1,37 +1,39 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: instrumenter-config
+  name: beyla-config
 data:
-  instrumenter-config.yml: |
+  beyla-config.yml: |
+    prometheus_export:
+      port: 8999
+      features:
+        - application
+        - application_process
     attributes:
+      select:
+        process_cpu_utilization:
+          include: ["*"]
+          exclude: ["cpu_mode"]
+        process_cpu_time:
+          include: ["*"]
+          exclude: ["cpu_mode"]
+        process_memory_usage:
+          include: ["*"]
+        process_memory_virtual:
+          include: ["*"]
+        process_disk_io:
+          include: ["*"]
+        process_network_io:
+          include: ["*"]
       kubernetes:
         enable: true
-        disable_informers:
-          - replicaset
-          - node
-          - service
         resource_labels:
           deployment.environment: ["deployment.environment"]
-      select:
-        "*":
-          include: ["*"]
     trace_printer: text
     log_level: debug
     discovery:
-      instrument:
-        - k8s_pod_name: testserver*
-    routes:
-      patterns:
-        - /pingpong
-      unmatched: path
-    ignored_patterns:
-      - /metrics
-    ignore_mode: traces
-    otel_metrics_export:
-      endpoint: http://otelcol:4318
-    otel_traces_export:
-      endpoint: http://jaeger:4318
+      services:
+        - k8s_deployment_name: (otherinstance|testserver)
 ---
 apiVersion: apps/v1
 kind: DaemonSet
@@ -52,9 +54,9 @@ spec:
       hostPID: true  #important!
       serviceAccountName: beyla
       volumes:
-        - name: instrumenter-config
+        - name: beyla-config
           configMap:
-            name: instrumenter-config
+            name: beyla-config
         - name: testoutput
           persistentVolumeClaim:
             claimName: testoutput
@@ -62,13 +64,13 @@ spec:
         - name: beyla
           image: beyla:dev
           imagePullPolicy: Never # loaded into Kind from localhost
-          args: ["--config=/config/instrumenter-config.yml"]
+          args: ["--config=/config/beyla-config.yml"]
           securityContext:
             privileged: true
             runAsUser: 0
           volumeMounts:
             - mountPath: /config
-              name: instrumenter-config
+              name: beyla-config
             - mountPath: /testoutput
               name: testoutput
           env:
@@ -80,9 +82,20 @@ spec:
               value: "10ms"
             - name: BEYLA_BPF_BATCH_TIMEOUT
               value: "10ms"
-            - name: BEYLA_OTEL_METRICS_TTL
-              value: "30m0s"
-            - name: BEYLA_OTEL_METRICS_FEATURES
-              value: "application,application_process"
-            - name: BEYLA_NAME_RESOLVER_SOURCES
-              value: "dns,k8s"
+          ports:
+            - containerPort: 8999
+              name: prometheus
+              protocol: TCP
+---
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: beyla-promscrape
+spec:
+  selector:
+    instrumentation: beyla
+  ports:
+    - port: 8999
+      name: prometheus
+      protocol: TCP
