fix: update oats paths

--- a/internal/test/oats/http/docker-compose-java-routes-disabled.yml
+++ b/internal/test/oats/http/docker-compose-java-routes-disabled.yml
@@ -1,8 +1,8 @@
 services:
   testserver:
     build:
-      context: ../../../..
-      dockerfile: ./internal/test/integration/components/javatestserver/Dockerfile_jar
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/javatestserver/Dockerfile_jar
     image: javakafka
     ports:
       - "8080:8085"
@@ -10,7 +10,7 @@ services:
   autoinstrumenter:
     build:
       context: ../../../..
-      dockerfile: ./internal/test/integration/components/beyla/Dockerfile
+      dockerfile: ./internal/test/beyla_extensions/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces-routes-disabled.yml
     volumes:
