--- a/internal/test/oats/mongo/docker-compose-go-mongo-v2.yml
+++ b/internal/test/oats/mongo/docker-compose-go-mongo-v2.yml
@@ -6,8 +6,8 @@ services:
 
   testserver:
     build:
-      context: ../../../..
-      dockerfile: ./internal/test/integration/components/gomongov2/Dockerfile
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/gomongov2/Dockerfile
     image: gomongo
     ports:
       - "8080:8080"
@@ -15,7 +15,7 @@ services:
   autoinstrumenter:
     build:
       context: ../../../..
-      dockerfile: ./internal/test/integration/components/beyla/Dockerfile
+      dockerfile: ./internal/test/beyla_extensions/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces.yml
     volumes:
