--- a/internal/test/oats/sql/docker-compose-beyla-sql.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-sql.yml
@@ -2,8 +2,8 @@ services:
   # Use postgres as a test SQL server
   sqlserver:
     build:
-      context: ../../integration/components/postgresql
-      dockerfile: Dockerfile
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/postgresql/Dockerfile
     image: postgres
     environment:
       POSTGRES_PASSWORD: "postgres" # Supplied so we can load the test schema
@@ -12,8 +12,8 @@ services:
   # Simple python HTTP server, which exposes one endpoint /query that does SQL query
   testserver:
     build:
-      context: ../../integration/components/pythonsql
-      dockerfile: Dockerfile
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/pythonsql/Dockerfile
     image: pysqlclient
     ports:
       - "8080:8080"
@@ -24,7 +24,7 @@ services:
   autoinstrumenter:
     build:
       context: ../../../..
-      dockerfile: ./internal/test/integration/components/beyla/Dockerfile
+      dockerfile: ./internal/test/beyla_extensions/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces-sql-text.yml
     volumes:
