--- a/internal/test/oats/http/docker-compose-beyla-python-grpc-client.yml
+++ b/internal/test/oats/http/docker-compose-beyla-python-grpc-client.yml
@@ -2,16 +2,16 @@ services:
   # GRPC server
   grpcsrv:
     build:
-      context: ../../integration/components/pythongrpc
-      dockerfile: Dockerfile_srv
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/pythongrpc/Dockerfile_srv
     image: grpcsrv
     ports:
       - "50051:50051"
   # Simple python HTTP server, which exposes one endpoint /query that calls the GRPC server
   testserver:
     build:
-      context: ../../integration/components/pythongrpc
-      dockerfile: Dockerfile
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/pythongrpc/Dockerfile
     image: grpclient
     ports:
       - "8080:8080"
@@ -19,7 +19,7 @@ services:
   autoinstrumenter:
     build:
       context: ../../../..
-      dockerfile: ./internal/test/integration/components/beyla/Dockerfile
+      dockerfile: ./internal/test/beyla_extensions/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-python-grpc.yml
     volumes:
