--- a/internal/test/oats/sql/docker-compose-beyla-gomysqlclient.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-gomysqlclient.yml
@@ -6,7 +6,7 @@ services:
       MYSQL_ROOT_PASSWORD: mysql
       MYSQL_DATABASE: sqltest
     volumes:
-      - ../../integration/components/gomysql/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../../../../.obi-src/internal/test/integration/components/gomysql/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
     healthcheck:
@@ -16,8 +16,8 @@ services:
       retries: 10
   testserver:
     build:
-      context: ../../integration/components/gomysql
-      dockerfile: Dockerfile
+      context: ../../../../.obi-src
+      dockerfile: internal/test/integration/components/gomysql/Dockerfile
     image: gomysqlclient
     depends_on:
       mysqlserver:
@@ -27,7 +27,7 @@ services:
   autoinstrumenter:
     build:
       context: ../../../..
-      dockerfile: ./internal/test/integration/components/beyla/Dockerfile
+      dockerfile: ./internal/test/beyla_extensions/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces.yml
     volumes:
