--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -48,7 +48,7 @@ jobs:
       # required for CODECOV token
       id-token: write
     steps:
-      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
           submodules: true
@@ -69,6 +69,16 @@ jobs:
       - name: Run integration tests
         run: make docker-generate integration-test-arm
         timeout-minutes: 60
+
+      - name: Debug path resolution
+        if: failure()
+        run: |
+          echo "=== config.go ==="
+          grep -E "pathRoot|pathObiSrc" internal/obi/test/integration/config.go || true
+          echo "=== red_test formated.json ==="
+          grep "formated" internal/obi/test/integration/red_test.go || true
+          echo "=== .obi-src file ==="
+          ls -la .obi-src/internal/test/integration/components/testserver/jsonrpc/body/ || true
 
       - name: Upload integration test logs
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
