--- a/internal/test/oats/http/docker-compose-beyla-python-grpc-client.yml
+++ b/internal/test/oats/http/docker-compose-beyla-python-grpc-client.yml
@@ -2,16 +2,16 @@ services:
   # GRPC server
   grpcsrv:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/pythongrpc/Dockerfile_srv
+      context: ../../../../.obi-src/internal/test/integration/components/pythongrpc
+      dockerfile: Dockerfile_srv
     image: grpcsrv
     ports:
       - "50051:50051"
   # Simple python HTTP server, which exposes one endpoint /query that calls the GRPC server
   testserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/pythongrpc/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/pythongrpc
+      dockerfile: Dockerfile
     image: grpclient
     ports:
       - "8080:8080"
