--- a/internal/test/oats/http/docker-compose-java-tls-sync-async.yml
+++ b/internal/test/oats/http/docker-compose-java-tls-sync-async.yml
@@ -1,8 +1,8 @@
 services:
   wrapper:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/java_tls/wrapper/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/java_tls/wrapper
+      dockerfile: Dockerfile
     image: wrapper
     ports:
       - "8080:8080"
