--- a/internal/test/oats/kafka/docker-compose-beyla-python-kafka.yml
+++ b/internal/test/oats/kafka/docker-compose-beyla-python-kafka.yml
@@ -31,8 +31,8 @@ services:
   # Simple python HTTP server, which exposes one endpoint /message that does Kafka query
   testserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/pythonkafka/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/pythonkafka
+      dockerfile: Dockerfile
     image: pythonkafka
     ports:
       - "8080:8080"
