--- a/internal/test/oats/redis/docker-compose-beyla-redis.yml
+++ b/internal/test/oats/redis/docker-compose-beyla-redis.yml
@@ -7,8 +7,8 @@ services:
   # Simple python HTTP server, which exposes one endpoint /query that does a few redis queries
   testserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/pythonredis/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/pythonredis
+      dockerfile: Dockerfile
     image: pyredisclient
     ports:
       - "8080:8080"
