--- a/internal/test/oats/sql/docker-compose-beyla-gopgx-stdlib.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-gopgx-stdlib.yml
@@ -2,8 +2,8 @@ version: "3.9"
 services:
   sqlserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/postgresql/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/postgresql
+      dockerfile: Dockerfile
     image: postgres
     environment:
       POSTGRES_PASSWORD: "postgres"
@@ -16,8 +16,8 @@ services:
       retries: 10
   testserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/gopgx-stdlib/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/gopgx-stdlib
+      dockerfile: Dockerfile
     image: gopgx-stdlib-client
     ports:
       - "8080:8080"
