--- a/internal/test/oats/sql/docker-compose-beyla-mysql.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-mysql.yml
@@ -2,16 +2,16 @@ services:
   # Use MySQL as a test SQL server
   sqlserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/mysqldb/Dockerfile
+      context: ../../../../.obi-src/internal/test/integration/components/mysqldb
+      dockerfile: Dockerfile
     image: mysql
     ports:
       - "3306:3306"
   # Simple python HTTP server, which exposes one endpoint /query that does SQL query
   testserver:
     build:
-      context: ../../../../.obi-src
-      dockerfile: internal/test/integration/components/pythonsql/Dockerfile_mysql
+      context: ../../../../.obi-src/internal/test/integration/components/pythonsql
+      dockerfile: Dockerfile_mysql
     image: pysqlclient
     ports:
       - "8080:8080"
