--- a/internal/test/beyla_extensions/k8s/manifests/06-beyla-all-processes.yml
+++ b/internal/test/beyla_extensions/k8s/manifests/06-beyla-all-processes.yml
@@ -52,7 +52,7 @@ spec:
         teardown: delete
     spec:
       hostPID: true  #important!
-      serviceAccountName: beyla
+      serviceAccountName: obi
       volumes:
         - name: beyla-config
           configMap:
