--- a/internal/test/beyla_extensions/k8s/manifests/06-beyla-daemonset-topology-extern.yml
+++ b/internal/test/beyla_extensions/k8s/manifests/06-beyla-daemonset-topology-extern.yml
@@ -44,7 +44,7 @@ spec:
         teardown: delete
     spec:
       hostPID: true  #important!
-      serviceAccountName: beyla
+      serviceAccountName: obi
       volumes:
         - name: beyla-config
           configMap:
