--- a/internal/test/oats/sql/docker-compose-beyla-gosqlclient-statement.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-gosqlclient-statement.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   testserver:
     build:
-      context: ../../integration/components/sqlclient
+      context: ../../../../.obi-src/internal/test/integration/components/sqlclient
       dockerfile: Dockerfile
     image: gosqlclient
     ports:
