--- a/.gitignore
+++ b/.gitignore
@@ -107,8 +107,8 @@ internal/test/integration/components/gosql/vendor/
 internal/test/integration/components/sqlclient/vendor/
 internal/test/integration/components/gohttp2/*/vendor/
 
-*_bpfel.go
-*_bpfel.o
+#*_bpfel.go
+#*_bpfel.o
 
 # Generated OBI test suite (created by scripts/generate-obi-tests.sh)
 internal/obi/test
