--- a/internal/test/beyla_extensions/k8s/manifests/06-beyla-all-processes.yml
+++ b/internal/test/beyla_extensions/k8s/manifests/06-beyla-all-processes.yml
@@ -91,7 +91,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: beyla-promscrape
+  name: obi-promscrape
 spec:
   selector:
     instrumentation: beyla
