--- a/.gitignore
+++ b/.gitignore
@@ -111,4 +111,4 @@ internal/test/integration/components/gohttp2/*/vendor/
 *_bpfel.o
 
 # Generated OBI test suite (created by scripts/generate-obi-tests.sh)
-internal/obi/test
+internal/testgenerated
